# neuroimaging-go-brrr

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/brainstorming/: consolidation-strategy.md
tests/: test_smoke.py
tools/bids-neuroimaging/: README.md
