[project]
name = "neuroimaging-go-brrrr"
version = "0.1.0"
description = "Neuroimaging tools for HuggingFace Hub"
requires-python = ">=3.11"
dependencies = [
  "datasets>=3.4.0",
  "huggingface-hub>=0.32.0",
  "nibabel>=5.0.0",
  "pandas>=2.0.0",
  "pandas-stubs>=2.3.3.251201",
]

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pre-commit>=4.0.0",
  "pytest>=9.0.0",
  "pytest-cov>=4.1.0",
  "pytest-sugar>=1.1.1",
  "ruff>=0.14.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = true
# Bypass mypy datasets errors
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["*.ipynb"]  # Notebooks excluded for now

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PTH", "RUF"]
